feat: add more functions

--- a/src/Aminoce/Sources/appsettings.json
+++ b/src/Aminoce/Sources/appsettings.json
@@ -4,13 +4,13 @@
             "Default": "Information"
         }
     },
-    "HttpServer": {
+    "Network": {
         "UrlPrefixes": [
             "http://127.0.0.1:50000"
         ],
         "MaxRequestsPerSecond": 50,
         "WhiteList": [],
-        "AccessTokens": [],
+        "AccessTokens": ["example"],
         "Certificate": {
             "Enable": false,
             "AutoRegisterCertificate": false,
